Commit de prueba

--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -55,7 +55,7 @@
         <strong>Archivo:</strong>&nbsp;<i>{{ nombreArchivo }}</i>
     </h5>
     <h5>
-        <strong>Cantidad contactos:</strong> {{ processedData.length }}
+        <strong>Cantidad de contactos:</strong> {{ processedData.length }}
         <button type = "button" (click) = "copiarRegistros()" class = "btn btn-primary float-right">Copiar <i class="fa fa-clipboard" aria-hidden="true"></i></button>
     </h5>
 
